@startuml

package Island {

    class Main {
       
    }
    package Altitude {

    }
    package BeachGen {

    }
    package Biomes {

    }
    package Configuration {

    }
    package Extractors {

    }
    package Graph {

    }
    package Humidity {

    }
    package LakeGen {

    }
    package Properties {

    }
    package RandomNumber {

    }
    package RiverGen {

    }
    package Shape {

    }
    package SoilAbsorption {

    }
    class findLandTiles {

    }
    class IslandGenerator {

    }
    class Lagoon {

    }

    Main ..> IslandGenerator
    Main ..> Lagoon
    Main ..> Properties
    Main ..> Configuration
    IslandGenerator ..> Configuration
    IslandGenerator ..> Altitude
    IslandGenerator ..> Shape
    IslandGenerator ..> Biomes
    IslandGenerator ..> LakeGen
    IslandGenerator ..> RiverGen
    IslandGenerator ..> SoilAbsorption
    IslandGenerator ..> findLandTiles
    SoilAbsorption ..> RandomNumber
    Shape ..> RandomNumber
    RiverGen ..> Extractors
    RiverGen ..> RandomNumber
    RiverGen ..> Properties
    RiverGen ..> Graph
    findLandTiles ..> Properties
    findLandTiles ..> Shape
    LakeGen ..> Extractors
    LakeGen ..> RandomNumber
    LakeGen ..> Properties
    Humidity ..> Extractors
    Humidity ..> RandomNumber
    Humidity ..> Properties
    Humidity ..> SoilAbsorption
    Graph ..> Extractors
    Configuration ..> Altitude
    Configuration ..> Biomes 
    Configuration ..> Properties
    Configuration ..> Shape
    Configuration ..> SoilAbsorption
    Biomes ..> Extractors
    Biomes ..> Properties
    BeachGen ..> Extractors
    Altitude ..> Extractors
    Altitude ..> Properties
    Altitude ..> Graph
    Altitude ..> RandomNumber

}


@enduml